# labwc-android

./: meson.build
clients/: pool-buffer.c
include/: buffer.h  labwc.h  output.h  view.h
include/config/: libinput.h
src/: buffer.c  main.c  meson.build  output.c  seat.c  server.c  theme.c  view.c  xdg-popup.c  xdg.c  xwayland.c
src/android/: TinywlInputService.cpp  TinywlInputService.hpp  TinywlMainService.cpp  ahb_wlr_allocator.c  ahb_wlr_allocator.h  android_callbacks.h  android_output.c  android_output.h  buffer_presenter.cpp  buffer_utils.cpp  buffer_utils.h  chroot_shell.sh  client_renderer.c  client_renderer.h  launch_chroot.sh  meson.build  start.sh
src/common/: dir.c  scene-helpers.c
src/config/: libinput.c  rcxml.c  session.c
src/input/: cursor.c  keyboard.c  tablet-pad.c
