labwc_sources += files(
  'ahb_wlr_allocator.c',
  'client_renderer.c',
#  'input_receiver.c',
  'buffer_presenter.cpp',
  'buffer_utils.cpp',
  'cros_gralloc_util.cpp',
  'TinywlInputService.cpp',
  'TinywlInputServiceQueue.cpp',
  'TinywlMainService.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/KeyEventAction.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/IInputFlingerRust.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/InputFilterConfiguration.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/DeviceInfo.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/IInputThread.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/IInputFilter.cpp',
  'aidl_source_output_dir/debug/out/com/android/server/inputflinger/KeyEvent.cpp',
  'aidl_source_output_dir/debug/out/com/xtr/tinywl/XdgTopLevel.cpp',
  'aidl_source_output_dir/debug/out/com/xtr/tinywl/WlrBox.cpp',
  'aidl_source_output_dir/debug/out/com/xtr/tinywl/ITinywlMain.cpp',
  'aidl_source_output_dir/debug/out/com/xtr/tinywl/ITinywlSurface.cpp',
  'aidl_source_output_dir/debug/out/com/xtr/tinywl/TinywlXdgTopLevelCallback.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Source.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Axis.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Meta.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/ToolType.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/EdgeFlag.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/MotionEvent.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/PointerCoords.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Flag.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Classification.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Action.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/Button.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/PolicyFlag.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/SourceClass.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/VideoFrame.cpp',
  'aidl_source_output_dir/debug/out/android/hardware/input/common/PointerProperties.cpp',
  'aidl_source_output_dir/debug/out/tinywl/ITinywlInput.cpp',
)
